--- a/项目文档/活动专题.md
+++ b/项目文档/活动专题.md
@@ -71,3 +71,5 @@ html代码:
 
 **源码**
 [https://github.com/tomieric/iui/tree/master/test/less/animate.css](https://github.com/tomieric/iui/tree/master/test/less/animate.css)
+
+[在线预览demo](http://ginosin.esy.es/animate.css/)
